<resources>
    <string name="app_name">Cobranza</string>
    <string name="tv_title">Por favor inicia sesión para continuar</string>
    <string name="et_client_number">Número de Cliente</string>
    <string name="et_password">Contraseña</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="btn_payment_confirmation">Confirmar Pago</string>
    <string name="btn_view_invoice_log">Ver Actividad</string>
    <string name="btn_load_photo">Cargar Foto</string>
    <string name="btn_continue">Continuar</string>
    <string name="et_amount">Importe</string>
    <string name="pick_image_intent_text">Selecciona una foto</string>
</resources>
