<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/Login.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_title" />

    <EditText
        android:id="@+id/etClientNum"
        style="@style/Login.ClientNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_client_number"
        android:inputType="text" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/Login.Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onLoginClick"
        android:text="@string/btn_login" />

</LinearLayout>