<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.PaymentActivity">

    <TextView
        android:id="@+id/tvPaymentInvoiceNumber"
        style="@style/Invoice.Field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="7AF1129B" />

    <Spinner
        android:id="@+id/spBranchOffice"
        style="@style/Invoice.Field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spBank"
        style="@style/Invoice.Field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etAmount"
        style="@style/Invoice.Field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_amount"
        android:inputType="numberDecimal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAlignment="center">

        <Button
            android:id="@+id/btnLoadPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btn_load_photo"
            android:drawableStart="@drawable/ic_camera"
            android:onClick="onLoadPhotoClicked"
            android:text="@string/btn_load_photo" />

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/btnLoadPhoto"
            android:onClick="onContinueClicked"
            android:text="@string/btn_continue" />

    </RelativeLayout>

</LinearLayout>